CHATS_SIT/force-app/main/default/objects/sfsit_t_adjmt_cmt_hist__x.object
<CustomObject>
    <description>sfsit$t_adjmt_cmt_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_adjmt_cmt_hist</externalName>
    <fields>
        <fullName>cde_type_cmt__c</fullName>
        <description>cde_type_cmt</description>
        <externalDeveloperName>cde_type_cmt</externalDeveloperName>
        <label>Comment type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_create__c</fullName>
        <description>dte_create</description>
        <externalDeveloperName>dte_create</externalDeveloperName>
        <label>Created date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>idn_adjmt__c</fullName>
        <description>idn_adjmt</description>
        <externalDeveloperName>idn_adjmt</externalDeveloperName>
        <label>Adjustment ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_cmt_adjmt__c</fullName>
        <description>idn_cmt_adjmt</description>
        <externalDeveloperName>idn_cmt_adjmt</externalDeveloperName>
        <label>Adjustment comment Id</label>
        <length>50</length>
        <referenceTargetField>T_ADJMT_CMT__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_ADJMT_CMT__c</referenceTo>
        <relationshipLabel>Adjustment Comment Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_adjmt_cmt_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_cmt_adjmt_hist__c</fullName>
        <description>idn_cmt_adjmt_hist</description>
        <externalDeveloperName>idn_cmt_adjmt_hist</externalDeveloperName>
        <label>Adjustment comment Hist Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_create_user__c</fullName>
        <description>idn_create_user</description>
        <externalDeveloperName>idn_create_user</externalDeveloperName>
        <label>User id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_adjmt_cmt_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_record_curr__c</fullName>
        <description>ind_record_curr</description>
        <externalDeveloperName>ind_record_curr</externalDeveloperName>
        <label>Current record indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical delete indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>txt_cmt__c</fullName>
        <description>txt_cmt</description>
        <externalDeveloperName>txt_cmt</externalDeveloperName>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>txt_subj__c</fullName>
        <description>txt_subj</description>
        <externalDeveloperName>txt_subj</externalDeveloperName>
        <label>Subject</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Adjustment Comment History</label>
    <pluralLabel>Adjustment Comment History</pluralLabel>
</CustomObject>